[gd_scene load_steps=22 format=3 uid="uid://n615rx02auyl"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_2o8nt"]
[ext_resource type="Texture2D" uid="uid://e88tapajqrdd" path="res://assets/art/ui/vignette.png" id="2_q64kn"]
[ext_resource type="Texture2D" uid="uid://dg6cb7vsauqg3" path="res://assets/art/ui/speech_box_halloween.png" id="2_vs3m8"]
[ext_resource type="FontFile" uid="uid://dgbfa2hluymi8" path="res://assets/fonts/KnightsQuest.ttf" id="3_0srao"]
[ext_resource type="Texture2D" uid="uid://by13oq4td5ugv" path="res://assets/art/ui/blind_mode.png" id="3_1igpa"]
[ext_resource type="Texture2D" uid="uid://cxs1m35u0dt16" path="res://assets/art/ui/character_headshots/zombie/lost_eye.png" id="4_rdnds"]
[ext_resource type="Theme" uid="uid://bdauou0gynqyt" path="res://ui/small_text_theme.tres" id="5_i0ay8"]
[ext_resource type="PackedScene" uid="uid://7tequ6t37p3f" path="res://ui/monument.tscn" id="5_svs0o"]
[ext_resource type="PackedScene" uid="uid://drx6mqaavj1g8" path="res://menus/stats_menu/stats.tscn" id="6_5uyu6"]
[ext_resource type="PackedScene" uid="uid://dwrgxipppsvqh" path="res://menus/pause_menu.tscn" id="6_nmmub"]
[ext_resource type="Script" path="res://ui/global_timer.gd" id="6_q18hy"]
[ext_resource type="PackedScene" uid="uid://b4lm6wvgyymd7" path="res://ui/wardrobe.tscn" id="6_wrs4g"]
[ext_resource type="PackedScene" uid="uid://budbi2xh55xtg" path="res://menus/level_finish_menu.tscn" id="7_af7if"]
[ext_resource type="PackedScene" uid="uid://cpie7bd51ae28" path="res://menus/leaderboards/leaderboard.tscn" id="7_w8yc4"]
[ext_resource type="PackedScene" uid="uid://dgwj8gbgo4n53" path="res://ui/crt_shader_scene.tscn" id="11_aqp30"]
[ext_resource type="Theme" uid="uid://bwnv8b362a2w7" path="res://menus/menu_theme.tres" id="11_qn1a0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xmiy5"]
texture = ExtResource("2_vs3m8")

[sub_resource type="Animation" id="Animation_eqahf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ckr47"]
resource_name = "fade_in"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"emit_start_level"
}]
}

[sub_resource type="Animation" id="Animation_vnv0l"]
resource_name = "fade_out"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oe3lb"]
_data = {
"RESET": SubResource("Animation_eqahf"),
"fade_in": SubResource("Animation_ckr47"),
"fade_out": SubResource("Animation_vnv0l")
}

[node name="ui" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_2o8nt")

[node name="textbox" type="Panel" parent="."]
visible = false
offset_left = 64.0
offset_top = 704.0
offset_right = 1856.0
offset_bottom = 896.0
theme_override_styles/panel = SubResource("StyleBoxTexture_xmiy5")

[node name="RichTextLabel" type="RichTextLabel" parent="textbox"]
layout_mode = 2
offset_left = 16.0
offset_top = 16.0
offset_right = 1776.0
offset_bottom = 176.0
theme_override_colors/default_color = Color(1, 0.980392, 0.764706, 1)
theme_override_colors/font_selected_color = Color(0.223529, 0.219608, 0.164706, 1)
theme_override_fonts/normal_font = ExtResource("3_0srao")
theme_override_font_sizes/normal_font_size = 72
theme_override_font_sizes/bold_font_size = 54
theme_override_font_sizes/italics_font_size = 54
theme_override_font_sizes/bold_italics_font_size = 54
theme_override_font_sizes/mono_font_size = 54

[node name="character_art" type="TextureRect" parent="textbox"]
z_index = -1
layout_mode = 0
offset_top = -500.0
offset_right = 500.0
texture = ExtResource("4_rdnds")

[node name="vignette" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_q64kn")

[node name="blind_obscure" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_1igpa")

[node name="global_timer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("5_i0ay8")
script = ExtResource("6_q18hy")

[node name="Label" type="Label" parent="global_timer"]
layout_mode = 0
offset_left = 1439.0
offset_top = 16.0
offset_right = 1904.0
offset_bottom = 77.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 18
theme_override_font_sizes/font_size = 60
text = "00:00:00:00:000"
horizontal_alignment = 2

[node name="level_label" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1904.0
offset_top = 16.0
offset_right = -1152.0
offset_bottom = 66.0
grow_horizontal = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 18
theme_override_font_sizes/font_size = 36

[node name="pop_up_label" type="Label" parent="."]
custom_minimum_size = Vector2(640, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_top = 88.0
offset_right = 320.0
offset_bottom = 127.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource("11_qn1a0")
theme_override_colors/font_color = Color(0.4, 0.803922, 0.666667, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 36
text = "* New Dog Found *"
horizontal_alignment = 1
vertical_alignment = 1

[node name="monument" parent="." instance=ExtResource("5_svs0o")]
visible = false
offset_left = 360.0
offset_top = 80.0
offset_right = -360.0
offset_bottom = -173.0

[node name="wardrobe" parent="." instance=ExtResource("6_wrs4g")]

[node name="leaderboard" parent="." instance=ExtResource("7_w8yc4")]
visible = false
offset_left = 360.0
offset_top = 80.0
offset_right = -360.0
offset_bottom = -173.0

[node name="stats" parent="." instance=ExtResource("6_5uyu6")]
visible = false
offset_left = 360.0
offset_top = 80.0
offset_right = -360.0
offset_bottom = -173.0

[node name="pause_menu" parent="." instance=ExtResource("6_nmmub")]
visible = false

[node name="level_finish_menu" parent="." instance=ExtResource("7_af7if")]
visible = false

[node name="transition" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oe3lb")
}

[node name="crt_texture" parent="." instance=ExtResource("11_aqp30")]

[connection signal="fade_out" from="pause_menu" to="." method="_on_pause_menu_fade_out"]
[connection signal="un_pause" from="pause_menu" to="." method="_on_pause_menu_un_pause"]
[connection signal="fade_out" from="level_finish_menu" to="." method="_on_level_finish_menu_fade_out"]
[connection signal="next_level" from="level_finish_menu" to="." method="_on_level_finish_menu_next_level"]
